--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -31,10 +32,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
 
 dependencies {
@@ -118,6 +121,10 @@ dependencies {
     implementation 'com.github.hackware1993:MagicIndicator:1.6.0'
     //高德定位
     implementation 'com.amap.api:location:5.2.0'
+    implementation 'com.amap.api:map2d:6.0.0'
+    implementation 'com.amap.api:search:7.7.0'
+
+
 
 
     //  AndroidX 的应用
@@ -126,10 +133,11 @@ dependencies {
 
     //图片选择框架
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.6.0'
+    implementation 'com.facebook.fresco:fresco:1.3.0'
 
+    //阿里云
+    implementation 'com.aliyun.dpa:oss-android-sdk:2.9.5'
 
-    //七牛图片上传通风吗
-    implementation 'com.qiniu:qiniu-android-sdk:8.1.+'
 
 
 }
